--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "ts-node-dev --respawn ./src/index.ts"
+        "dev": "ts-node-dev --respawn ./src/index.ts",
+        "dev:debug": "ts-node-dev --inspect --respawn ./src/index.ts"
     },
     "keywords": [],
     "author": "",
