--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "cpf-cnpj-validator": "^1.0.3",
         "express": "^4.18.2",
         "uuid": "^9.0.0"
     },
