--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "ts-node-dev --respawn ./src/index.ts",
-        "dev:debug": "ts-node-dev --inspect --respawn ./src/index.ts"
+        "dev:debug": "ts-node-dev --inspect --respawn ./src/index.ts",
+        "postinstall": "tsc"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "cors": "^2.8.5",
         "cpf-cnpj-validator": "^1.0.3",
+        "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "uuid": "^9.0.0"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.13",
         "@types/express": "^4.17.15",
         "@types/node": "^18.11.18",
         "@types/uuid": "^9.0.0",
