--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
         "cpf-cnpj-validator": "^1.0.3",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "pg": "^8.10.0",
         "uuid": "^9.0.0"
     },
     "devDependencies": {
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.15",
         "@types/node": "^18.11.18",
+        "@types/pg": "^8.6.6",
         "@types/uuid": "^9.0.0",
         "ts-node-dev": "^2.0.0",
         "typescript": "^4.9.4"
