--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "ts-node-dev --respawn ./src/index.ts",
         "dev:debug": "ts-node-dev --inspect --respawn ./src/index.ts",
-        "postinstall": "tsc"
+        "postinstall": "tsc",
+        "typeorm": "typeorm-ts-node-commonjs"
     },
     "keywords": [],
     "author": "",
@@ -18,6 +19,8 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "pg": "^8.10.0",
+        "reflect-metadata": "^0.1.13",
+        "typeorm": "^0.3.11",
         "uuid": "^9.0.0"
     },
     "devDependencies": {
