--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "cpf-cnpj-validator": "^1.0.3",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "ioredis": "^5.3.2",
         "pg": "^8.10.0",
         "reflect-metadata": "^0.1.13",
         "typeorm": "^0.3.11",
