--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "ts-node-dev --respawn ./src/index.ts",
         "dev:debug": "ts-node-dev --inspect --respawn ./src/index.ts",
         "postinstall": "tsc",
@@ -12,7 +11,11 @@
         "migration:generate": "npm run typeorm migration:generate -- -d ./src/main/config/typeorm.config.ts",
         "migration:create": "npm run typeorm migration:create",
         "migration:run": "npm run typeorm migration:run -- -d ./src/main/config/typeorm.config.ts",
-        "migration:revert": "npm run typeorm migration:revert -- -d ./src/main/config/typeorm.config.ts"
+        "migration:revert": "npm run typeorm migration:revert -- -d ./src/main/config/typeorm.config.ts",
+        "test": "jest --silent --noStackTrace --runInBand",
+        "test:verbose": "jest --verbose --runInBand --detectOpenHandles",
+        "test:coverage": "jest --runInBand --coverage",
+        "test:watch": "jest --silent --noStackTrace --runInBand --watchAll"
     },
     "keywords": [],
     "author": "",
@@ -23,6 +26,7 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "ioredis": "^5.3.2",
+        "jest": "^29.5.0",
         "pg": "^8.10.0",
         "reflect-metadata": "^0.1.13",
         "typeorm": "^0.3.11",
@@ -31,9 +35,11 @@
     "devDependencies": {
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.15",
+        "@types/jest": "^29.5.1",
         "@types/node": "^18.11.18",
         "@types/pg": "^8.6.6",
         "@types/uuid": "^9.0.0",
+        "ts-jest": "^29.1.0",
         "ts-node-dev": "^2.0.0",
         "typescript": "^4.9.4"
     }
