--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "jest": "^29.5.0",
         "pg": "^8.10.0",
         "reflect-metadata": "^0.1.13",
+        "supertest": "^6.3.3",
         "typeorm": "^0.3.11",
         "uuid": "^9.0.0"
     },
@@ -38,6 +39,7 @@
         "@types/jest": "^29.5.1",
         "@types/node": "^18.11.18",
         "@types/pg": "^8.6.6",
+        "@types/supertest": "^2.0.12",
         "@types/uuid": "^9.0.0",
         "ts-jest": "^29.1.0",
         "ts-node-dev": "^2.0.0",
