--- a/package.json
+++ b/package.json
@@ -15,7 +15,14 @@
         "test": "jest --silent --noStackTrace --runInBand",
         "test:verbose": "jest --verbose --runInBand --detectOpenHandles",
         "test:coverage": "jest --runInBand --coverage",
-        "test:watch": "jest --silent --noStackTrace --runInBand --watchAll"
+        "test:watch": "jest --silent --noStackTrace --runInBand --watchAll",
+        "migration:generate:test": "cross-env API_ENV=test npm run typeorm migration:generate -- -d ./src/main/config/typeorm.config.ts tests/app/shared/database/migrations/TestsMigration",
+        "migration:run:test": "cross-env API_ENV=test npm run typeorm migration:run -- -d ./src/main/config/typeorm.config.ts",
+        "test:integration": "cross-env API_ENV=test jest -c ./jest-integration.config.ts --silent --noStackTrace --runInBand",
+        "test:integration:verbose": "cross-env API_ENV=test jest -c ./jest-integration.config.ts --verbose --runInBand --detectOpenHandles",
+        "test:integration:coverage": "cross-env API_ENV=test jest -c ./jest-integration.config.ts --runInBand --coverage",
+        "test:integration:watch": "cross-env API_ENV=test jest -c ./jest-integration.config.ts --silent --noStackTrace --runInBand --watchAll",
+        "test:setup": "rimraf database.sqlite3 && rimraf ./tests/app/shared/database/migrations && npm run migration:generate:test && npm run migration:run:test"
     },
     "keywords": [],
     "author": "",
@@ -23,12 +30,15 @@
     "dependencies": {
         "cors": "^2.8.5",
         "cpf-cnpj-validator": "^1.0.3",
+        "cross-env": "^7.0.3",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "ioredis": "^5.3.2",
         "jest": "^29.5.0",
         "pg": "^8.10.0",
         "reflect-metadata": "^0.1.13",
+        "rimraf": "^5.0.0",
+        "sqlite3": "^5.1.6",
         "supertest": "^6.3.3",
         "typeorm": "^0.3.11",
         "uuid": "^9.0.0"
