--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "test": "jest --silent --noStackTrace --runInBand",
         "test:verbose": "jest --verbose --runInBand --detectOpenHandles",
         "test:coverage": "jest --runInBand --coverage",
-        "test:watch": "jest --silent --noStackTrace --runInBand --watchAll",
+        "test:watch": "jest -c ./jest-unit.config.ts --silent --noStackTrace --runInBand --watchAll",
         "migration:generate:test": "cross-env API_ENV=test npm run typeorm migration:generate -- -d ./src/main/config/typeorm.config.ts tests/app/shared/database/migrations/TestsMigration",
         "migration:run:test": "cross-env API_ENV=test npm run typeorm migration:run -- -d ./src/main/config/typeorm.config.ts",
         "test:integration": "cross-env API_ENV=test jest -c ./jest-integration.config.ts --silent --noStackTrace --runInBand",
